--- a/index.html
+++ b/index.html
@@ -159,17 +159,22 @@
 
     <div class="why__choose">
       <div class="right__image">
-        <img src="public\images\choose-us.png" alt="why-choose" />
+        <img class="choose__image" src="public\images\choose-us.png" alt="why-choose" />
       </div>
       <div class="why__choose__text">
-        <h1>Why Choose Us?.</h1>
-        <div>
-          Freshness Delivered: Enjoy premium quality fruits and vegetables straight to your doorstep, sourced for ultimate freshness.
+        <h1 class="why__choose__text__title">Why Choose Us?.</h1>
+        <h1 class="why__choose__text__subtitle">Find Favorites and <br/> Discover New Ones</h1>
+        <div class="desc__text__wrapper">
+         <span class="styled_choice">Freshness Delivered</span> : Enjoy premium quality fruits and vegetables straight to your doorstep, sourced for ultimate freshness.
 
-          Organic & Healthy Choices: Elevate your well-being with 100% organic and nutritious foods, delivered hassle-free.
+         <span class="styled_choice">Organic & Healthy Choices</span> : Elevate your well-being with 100% organic and nutritious foods, delivered hassle-free.
           
-          Fast & Reliable Service: Experience the convenience of 2-hour delivery and secure checkout for a seamless shopping journey.
+         <span class="styled_choice">Fast & Reliable Service</span> : Experience the convenience of 2-hour delivery and secure checkout for a seamless shopping journey.
         </div>
+         <div class="call-to-action-choice">
+            <button class="order-button-choice">Explore Now</button>
+          </div>
+         </div>
       </div>
     </div>
   </body>
