--- a/index.html
+++ b/index.html
@@ -177,5 +177,32 @@
          </div>
       </div>
     </div>
+
+    <div class="delivery__section">
+      <div class="left__section">
+        <div class="intro__feature">
+          <h1>HOME DELIVERY</h1>
+        </div>
+        <div class="intro__title">
+          <h1>
+          Sit at Home We Will Take Care Your Order
+         </h1>
+        </div>
+        <div class="delivery__body__text">
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos<br/> ducimus qui blanditiis praesentium voluptatum <br/> deleniti atque corrupti quos 
+          </p>
+        </div>
+        <div class="delivery__callTo__action">
+          <button>
+              Explore Now
+          </button>
+        </div>
+      </div>
+       <div class="right__section">
+        <img src="public\images\image and card.png" alt="cheese">
+       </div>
+      
+    </div>
   </body>
 </html>
