--- a/index.html
+++ b/index.html
@@ -159,50 +159,70 @@
 
     <div class="why__choose">
       <div class="right__image">
-        <img class="choose__image" src="public\images\choose-us.png" alt="why-choose" />
+        <img
+          class="choose__image"
+          src="public\images\choose-us.png"
+          alt="why-choose"
+        />
       </div>
       <div class="why__choose__text">
         <h1 class="why__choose__text__title">Why Choose Us?.</h1>
-        <h1 class="why__choose__text__subtitle">Find Favorites and <br/> Discover New Ones</h1>
+        <h1 class="why__choose__text__subtitle">
+          Find Favorites and <br />
+          Discover New Ones
+        </h1>
         <div class="desc__text__wrapper">
-         <span class="styled_choice">Freshness Delivered</span> : Enjoy premium quality fruits and vegetables straight to your doorstep, sourced for ultimate freshness.
+          <span class="styled_choice">Freshness Delivered</span> : Enjoy premium
+          quality fruits and vegetables straight to your doorstep, sourced for
+          ultimate freshness.
 
-         <span class="styled_choice">Organic & Healthy Choices</span> : Elevate your well-being with 100% organic and nutritious foods, delivered hassle-free.
-          
-         <span class="styled_choice">Fast & Reliable Service</span> : Experience the convenience of 2-hour delivery and secure checkout for a seamless shopping journey.
+          <span class="styled_choice">Organic & Healthy Choices</span> : Elevate
+          your well-being with 100% organic and nutritious foods, delivered
+          hassle-free.
+
+          <span class="styled_choice">Fast & Reliable Service</span> :
+          Experience the convenience of 2-hour delivery and secure checkout for
+          a seamless shopping journey.
         </div>
-         <div class="call-to-action-choice">
-            <button class="order-button-choice">Explore Now</button>
-          </div>
-         </div>
+        <div class="call-to-action-choice">
+          <button class="order-button-choice">Explore Now</button>
+        </div>
       </div>
     </div>
 
     <div class="delivery__section">
       <div class="left__section">
         <div class="intro__feature">
-          <h1>HOME DELIVERY</h1>
+          <h2>HOME DELIVERY</h2>
         </div>
         <div class="intro__title">
-          <h1>
-          Sit at Home We Will Take Care Your Order
-         </h1>
+          <h3>
+            Sit at Home We Will Take Care Your Order
+          </h3>
         </div>
         <div class="delivery__body__text">
           <p>
-            At vero eos et accusamus et iusto odio dignissimos<br/> ducimus qui blanditiis praesentium voluptatum <br/> deleniti atque corrupti quos 
+            At vero eos et accusamus et iusto odio dignissimos<br />
+            ducimus qui blanditiis praesentium voluptatum <br />
+            deleniti atque corrupti quos
           </p>
         </div>
         <div class="delivery__callTo__action">
           <button>
-              Explore Now
+            Explore Now
           </button>
         </div>
       </div>
-       <div class="right__section">
-        <img src="public\images\image and card.png" alt="cheese">
-       </div>
-      
+      <div class="right__section">
+        <img
+          class="cheece__image"
+          src="public\images\image and card.png"
+          alt="cheese"
+        />
+        <div class="bike__delivery">
+          <img src="public\images\bike-delivery.png" alt="bike-delivery" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
