edit download section

--- a/index.html
+++ b/index.html
@@ -224,5 +224,28 @@
         </div>
       </div>
     </div>
+
+    <div class="download__section">
+      <div class="phone__photo"></div>
+      <div class="download__details">
+        <div class="download__intro">
+          <h3>Download our app</h3>
+        </div>
+        <div class="download__title">
+          <h1>Get the Groceries app <br/> order more easily.</h1>
+        </div>
+        <div class="download__body__text">
+          <p>Lorem ipsum dolor sit amet,
+             consectetur adipiscing <br/> elit, sed do eiusmod tempor incididunt ut.</p>
+        </div>
+        <div class="download__callTo__action">
+          <button>
+            App Store
+          </button>
+          <button>
+            Play Store
+          </button>
+      </div>
+    </div>
   </body>
 </html>
