finish up CTA section

--- a/index.html
+++ b/index.html
@@ -225,26 +225,40 @@
       </div>
     </div>
 
-    <div class="download__section">
-      <div class="phone__photo"></div>
-      <div class="download__details">
-        <div class="download__intro">
-          <h3>Download our app</h3>
+    <div class="CTA">
+      <div class="CTA__wrapper">
+        <div class="phone__photo">
+          <img src="public\images\mobile mockup.png" alt="mobile mockup" />
         </div>
-        <div class="download__title">
-          <h1>Get the Groceries app <br/> order more easily.</h1>
+        <div class="download__details">
+          <div class="download__intro">
+            <h3>Download our app</h3>
+          </div>
+          <div class="download__title">
+            <h3>
+              Get the Groceries app <br />
+              order more easily.
+            </h3>
+          </div>
+          <div class="download__body__text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+              elit, sed do eiusmod tempor incididunt ut.
+            </p>
+          </div>
+          <div class="download__callTo__action">
+            <button>
+              <img src="public\images\app-store.svg" alt="app-store" />
+                <h3>App Store</h3>
+            </button>
+            <button>
+              <img src="public\images\play-store.svg" alt="play-store" />
+                <h3>
+                  Play Store
+                </h3>
+            </button>
+          </div>
         </div>
-        <div class="download__body__text">
-          <p>Lorem ipsum dolor sit amet,
-             consectetur adipiscing <br/> elit, sed do eiusmod tempor incididunt ut.</p>
-        </div>
-        <div class="download__callTo__action">
-          <button>
-            App Store
-          </button>
-          <button>
-            Play Store
-          </button>
       </div>
     </div>
   </body>
