style footer links

--- a/index.html
+++ b/index.html
@@ -249,17 +249,80 @@
           <div class="download__callTo__action">
             <button>
               <img src="public\images\app-store.svg" alt="app-store" />
-                <h3>App Store</h3>
+              <h3>App Store</h3>
             </button>
             <button>
               <img src="public\images\play-store.svg" alt="play-store" />
-                <h3>
-                  Play Store
-                </h3>
+              <h3>
+                Play Store
+              </h3>
             </button>
           </div>
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="footer">
+        <div class="footer__links">
+          <div>
+            <a href="index.html">
+              <img src="public\images\logo.svg" alt="logo" />
+            </a>
+            <p class="footer__text">
+              Fast delivery, which is active all<br />
+              over the world, serves with many <br />
+              transportation vehicles.
+            </p>
+          </div>
+          <div>
+            <h3 class="footer__title">Company</h3>
+            <div class="footer__links">
+              <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">All Products</a></li>
+                <li><a href="#">Locations Map</a></li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h3 class="footer__title">Services</h3>
+            <div class="footer__links">
+              <ul>
+                <li><a href="#">Order tracking</a></li>
+                <li><a href="#">Wish list</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">My Account</a></li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <h3 class="footer__title">Get in Touch</h3>
+            <p>
+              Subscribe to our weekly Newsletter <br />
+              and receive 
+              updates via email.
+            </p>
+            <form action="" class="footer__form">
+              <input
+                type="email"
+                placeholder="Enter your email"
+                class="footer__input"
+              />
+              <button class="footer__button">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <hr/>
+        <div class="copyright">
+          <p>© 2023 Grocer. All Rights Reserved.</p>
+          <div class="terms__privacy">
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
