add comments to identify different sections of the web app

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </div>
       </nav>
 
+      <!-- Hero Section -->
+
       <div class="hero-section">
         <div class="right-hero-section">
           <div class="intro-feature">
@@ -102,6 +104,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Features Section -->
     <div class="features">
       <div class="feature-container">
         <div class="feature__intro">
@@ -157,6 +161,8 @@
       </div>
     </div>
 
+
+    <!-- Products Section -->
     <div class="why__choose">
       <div class="right__image">
         <img
@@ -190,6 +196,8 @@
       </div>
     </div>
 
+
+    <!--Delivery Section -->
     <div class="delivery__section">
       <div class="left__section">
         <div class="intro__feature">
@@ -225,6 +233,8 @@
       </div>
     </div>
 
+
+    <!-- Call to action Section -->
     <div class="CTA">
       <div class="CTA__wrapper">
         <div class="phone__photo">
@@ -262,6 +272,8 @@
       </div>
     </div>
 
+
+    <!-- Footer -->
     <footer>
       <div class="footer">
         <div class="footer__links">
