--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <img src="public\images\logo.svg" alt="logo" />
           </a>
         </div>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line short"></div>
+          <div class="line"></div>
+        </div>
         <div class="nav-links">
           <ul>
             <li><a href="index.html" class="home__link">Home</a></li>
@@ -58,7 +63,7 @@
 
     <!-- Hero Section -->
 
-    <div class="hero-section">
+    <!-- <div class="hero-section">
       <div class="right-hero-section">
         <div class="intro-feature">
           <p>
@@ -102,10 +107,10 @@
       <div class="hero-image">
         <img src="public\images\heero-image.png" alt="hero-image" />
       </div>
-    </div>
+    </div> -->
 
     <!-- Features Section -->
-    <div class="features">
+    <!-- <div class="features">
       <div class="feature-container">
         <div class="feature__intro">
           <p>What we Serve</p>
@@ -158,10 +163,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Products Section -->
-    <div class="why__choose">
+    <!-- <div class="why__choose">
       <div class="right__image">
         <img
           class="choose__image"
@@ -192,10 +197,10 @@
           <button class="order-button-choice">Explore Now</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--Delivery Section -->
-    <div class="delivery__section">
+    <!-- <div class="delivery__section">
       <div class="left__section">
         <div class="intro__feature">
           <h2>HOME DELIVERY</h2>
@@ -229,10 +234,10 @@
           <img src="public\images\bike-delivery.png" alt="bike-delivery" />
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Call to action Section -->
-    <div class="CTA">
+    <!-- <div class="CTA">
       <div class="CTA__wrapper">
         <div class="phone__photo">
           <img src="public\images\mobile mockup.png" alt="mobile mockup" />
@@ -267,10 +272,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
       <div class="footer">
         <div class="footer__links">
           <div>
@@ -330,6 +335,6 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
