--- a/index.html
+++ b/index.html
@@ -26,39 +26,41 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="nav__container">
-      <div class="nav__wrapper">
-        <div class="logo">
-          <a href="index.html">
-            <img src="public\images\logo.svg" alt="logo" />
-          </a>
-        </div>
-        <div class="hamburger">
-          <div class="line"></div>
-          <div class="line short"></div>
-          <div class="line"></div>
-        </div>
-        <div class="nav-links">
-          <ul>
-            <li><a href="index.html" class="home__link">Home</a></li>
-            <li><a href="products.html">Menu</a></li>
-            <li><a href="about.html">Service</a></li>
-            <li><a href="about.html">Shop</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="search-cart">
-          <div class="search">
-            <input type="text" class="search__input" placeholder="Search" />
-            <button class="search-icon">
-              <img src="public\images\icon.svg" alt="search" />
-            </button>
+    <nav class="nav">
+       <div class="nav__container">
+        <div class="nav__wrapper">
+          <div class="logo">
+            <a href="index.html">
+              <img src="public\images\logo.svg" alt="logo" />
+            </a>
           </div>
-          <div class="cart">
-            <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
+          <div class="hamburger">
+            <div class="line"></div>
+            <div class="line short"></div>
+            <div class="line"></div>
+          </div>
+          <div class="nav-links">
+            <ul>
+              <li><a href="index.html" class="home__link">Home</a></li>
+              <li><a href="products.html">Menu</a></li>
+              <li><a href="about.html">Service</a></li>
+              <li><a href="about.html">Shop</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="search-cart">
+            <div class="search">
+              <input type="text" class="search__input" placeholder="Search" />
+              <button class="search-icon">
+                <img src="public\images\icon.svg" alt="search" />
+              </button>
+            </div>
+            <div class="cart">
+              <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
+            </div>
           </div>
         </div>
-      </div>
+       </div>
     </nav>
 
     <!-- Hero Section -->
