uncomment hero section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Hero Section -->
 
-    <!-- <div class="hero-section">
+    <div class="hero-section">
       <div class="right-hero-section">
         <div class="intro-feature">
           <p>
@@ -109,7 +109,7 @@
       <div class="hero-image">
         <img src="public\images\heero-image.png" alt="hero-image" />
       </div>
-    </div> -->
+    </div>
 
     <!-- Features Section -->
     <!-- <div class="features">
