style play button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <button class="play-wrapper">
                 <img
                   class="play-button"
-                  src="https://icons8.com/icon/80556/play"
+                  src="public\images\play-64.png"
                   alt="play-button"
                 />
               </button>
