finish up small screen responsiveness

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div>
             <h1 class="hero-large-text">
               Groceries <br />
-              delivered in as <br />
+              delivered in as 
               little as <span class="red-text">2 hours</span>
             </h1>
           </div>
@@ -106,8 +106,8 @@
           </div>
         </div>
       </div>
-      <div class="hero-image">
-        <img src="public\images\heero-image.png" alt="hero-image" />
+      <div class="hero-image-wrapper">
+        <img src="public\images\heero-image.png" alt="hero-image"  class="hero-image"/>
       </div>
     </div>
 
