--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Features Section -->
-    <!-- <div class="features">
+    <div class="features">
       <div class="feature-container">
         <div class="feature__intro">
           <p>What we Serve</p>
@@ -165,10 +165,10 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Products Section -->
-    <!-- <div class="why__choose">
+    <div class="why__choose">
       <div class="right__image">
         <img
           class="choose__image"
@@ -199,10 +199,10 @@
           <button class="order-button-choice">Explore Now</button>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!--Delivery Section -->
-    <!-- <div class="delivery__section">
+    <div class="delivery__section">
       <div class="left__section">
         <div class="intro__feature">
           <h2>HOME DELIVERY</h2>
@@ -236,10 +236,10 @@
           <img src="public\images\bike-delivery.png" alt="bike-delivery" />
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Call to action Section -->
-    <!-- <div class="CTA">
+    <div class="CTA">
       <div class="CTA__wrapper">
         <div class="phone__photo">
           <img src="public\images\mobile mockup.png" alt="mobile mockup" />
@@ -274,10 +274,10 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Footer -->
-    <!-- <footer>
+    <footer>
       <div class="footer">
         <div class="footer__links">
           <div>
@@ -337,7 +337,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Scripts -->
     <script src="index.js"></script>
