removed skewed box in features section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </h2>
         </div>
         <div class="features__wrapper">
-          <div class="feature__item">
+          <div class="feature__item one">
             <div class="feature__image">
               <img src="public\images\feature-1.svg" alt="feature-1" />
             </div>
@@ -151,7 +151,7 @@
               <div class="skewed__box"></div>
             </div>
           </div>
-          <div class="feature__item">
+          <div class="feature__item three">
             <div class="feature__image">
               <img src="public\images\feature-3.svg" alt="feature-3" />
             </div>
