removed skewed box in features section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Navigation -->
     <nav class="nav">
-       <div class="nav__container">
+      <div class="nav__container">
         <div class="nav__wrapper">
           <div class="logo">
             <a href="index.html">
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-       </div>
+      </div>
     </nav>
 
     <!-- Hero Section -->
@@ -79,8 +79,7 @@
           <div>
             <h1 class="hero-large-text">
               Groceries <br />
-              delivered in as 
-              little as <span class="red-text">2 hours</span>
+              delivered in as little as <span class="red-text">2 hours</span>
             </h1>
           </div>
           <div>
@@ -107,7 +106,11 @@
         </div>
       </div>
       <div class="hero-image-wrapper">
-        <img src="public\images\heero-image.png" alt="hero-image"  class="hero-image"/>
+        <img
+          src="public\images\heero-image.png"
+          alt="hero-image"
+          class="hero-image"
+        />
       </div>
     </div>
 
@@ -136,21 +139,20 @@
               </p>
             </div>
           </div>
-          <div class="skewed">
-            <div class="feature__item" id="middle__box">
-              <div class="feature__image">
-                <img src="public\images\feature-2.svg" alt="feature-2" />
-              </div>
-              <div class="feature__text">
-                <h3>100% Organic</h3>
-                <p>
-                  Get your healthy foods & snacks <br />
-                  delivered at your doorsteps
-                </p>
-              </div>
-              <div class="skewed__box"></div>
+
+          <div class="feature__item">
+            <div class="feature__image">
+              <img src="public\images\feature-2.svg" alt="feature-2" />
+            </div>
+            <div class="feature__text">
+              <h3>100% Organic</h3>
+              <p>
+                Get your healthy foods & snacks <br />
+                delivered at your doorsteps
+              </p>
             </div>
           </div>
+
           <div class="feature__item three">
             <div class="feature__image">
               <img src="public\images\feature-3.svg" alt="feature-3" />
