finish features section responsiveness

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="feature__intro">
           <h2>
-            fruit and vegetable delivered <br />
+            fruits and vegetables delivered <br />
             to your home
           </h2>
         </div>
