wrap delivery section in a container

--- a/index.html
+++ b/index.html
@@ -203,39 +203,41 @@
 
     <!--Delivery Section -->
     <div class="delivery__section">
-      <div class="left__section">
-        <div class="intro__feature">
-          <h2>HOME DELIVERY</h2>
+       <div class="delivery__wrapper">
+        <div class="left__section">
+          <div class="intro__feature">
+            <h2>HOME DELIVERY</h2>
+          </div>
+          <div class="intro__title">
+            <h3>
+              Sit at Home We Will <br />
+              Take Care Your Order
+            </h3>
+          </div>
+          <div class="delivery__body__text">
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos<br />
+              ducimus qui blanditiis praesentium voluptatum <br />
+              deleniti atque corrupti quos
+            </p>
+          </div>
+          <div class="delivery__callTo__action">
+            <button>
+              Explore Now
+            </button>
+          </div>
         </div>
-        <div class="intro__title">
-          <h3>
-            Sit at Home We Will <br />
-            Take Care Your Order
-          </h3>
+        <div class="right__section">
+          <img
+            class="cheece__image"
+            src="public\images\image and card.png"
+            alt="cheese"
+          />
+          <div class="bike__delivery">
+            <img src="public\images\bike-delivery.png" alt="bike-delivery" />
+          </div>
         </div>
-        <div class="delivery__body__text">
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos<br />
-            ducimus qui blanditiis praesentium voluptatum <br />
-            deleniti atque corrupti quos
-          </p>
-        </div>
-        <div class="delivery__callTo__action">
-          <button>
-            Explore Now
-          </button>
-        </div>
-      </div>
-      <div class="right__section">
-        <img
-          class="cheece__image"
-          src="public\images\image and card.png"
-          alt="cheese"
-        />
-        <div class="bike__delivery">
-          <img src="public\images\bike-delivery.png" alt="bike-delivery" />
-        </div>
-      </div>
+       </div>
     </div>
 
     <!-- Call to action Section -->
