edit delivery section

--- a/index.html
+++ b/index.html
@@ -216,9 +216,7 @@
           </div>
           <div class="delivery__body__text">
             <p>
-              At vero eos et accusamus et iusto odio dignissimos<br />
-              ducimus qui blanditiis praesentium voluptatum <br />
-              deleniti atque corrupti quos
+              Enjoy the convenience of home delivery and let us take care of your orders with utmost care and reliability.
             </p>
           </div>
           <div class="delivery__callTo__action">
