--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
             src="public\images\image and card.png"
             alt="cheese"
           />
-          <div class="bike__delivery">
-            <img src="public\images\bike-delivery.png" alt="bike-delivery" />
-          </div>
+          
+            <img class="bike__delivery" src="public\images\bike-delivery.png" alt="bike-delivery" />
+        
         </div>
       </div>
     </div>
