replace CTA body text

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
           </div>
           <div class="delivery__body__text">
             <p>
-              Enjoy the convenience of home delivery and let us take care of your orders with utmost care and reliability.
+              Enjoy the convenience of home delivery and let us take care of
+              your orders with utmost care and reliability.
             </p>
           </div>
           <div class="delivery__callTo__action">
@@ -256,8 +257,9 @@
           </div>
           <div class="download__body__text">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing <br />
-              elit, sed do eiusmod tempor incididunt ut.
+              Discover the Groceries app and revolutionize your shopping with
+              easy browsing, quick order placement, and doorstep delivery of
+              fresh produce and pantry essentials
             </p>
           </div>
           <div class="download__callTo__action">
