add nowrap to some whitespaces in the hero section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div>
             <h1 class="hero-large-text">
               Groceries <br />
-              delivered in as little as <span class="red-text">2 hours</span>
+              <span class="non__break__hero__text">delivered in as </span> <span class="non__break__hero__text">little as <span class="red-text">2 hours</span></span>
             </h1>
           </div>
           <div>
